--- a/clubProject/app/src/main/res/layout/activity_login_screen.xml
+++ b/clubProject/app/src/main/res/layout/activity_login_screen.xml
@@ -29,7 +29,22 @@
                 android:id="@+id/email_login_form"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <ImageButton
+                    android:layout_width="129dp"
+                    android:layout_height="129dp"
+                    android:id="@+id/loginscreen_image"
+                    android:layout_gravity="center_horizontal"
+                    android:clickable="true"
+                    android:background="@drawable/s_a_icon" />
+
+                <Space
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:minHeight="50dp" />
 
                 <AutoCompleteTextView
                     android:id="@+id/email"
@@ -51,6 +66,21 @@
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:singleLine="true"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/ForgotPassText"
+                    android:text="@string/ForgotPassText"
+                    android:layout_gravity="right"
+                    android:autoLink="web"
+                    android:textStyle="italic"
+                    android:textColor="#0000FF"
+                    android:layout_weight="1"
+                    android:enabled="true"
+                    android:linksClickable="true"
+                    android:autoText="true" />
 
                 <Button
                     android:id="@+id/email_sign_in_button"
