--- a/clubProject/app/src/main/res/values/strings_activity_login_screen.xml
+++ b/clubProject/app/src/main/res/values/strings_activity_login_screen.xml
@@ -4,8 +4,11 @@
     <!-- Strings related to login -->
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in">Sign in or Register</string>
     <string name="action_sign_in_short">Sign in</string>
+
+    <!-- Test Forgot Password Page Link-->
+    <string name="ForgotPassText"><a href="http://www.google.com">Forgot Password?</a></string>
 
     <string name="error_invalid_email">This email address is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
