--- a/clubProject/app/src/main/res/layout/sa_layout_frag.xml
+++ b/clubProject/app/src/main/res/layout/sa_layout_frag.xml
@@ -7,16 +7,15 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="108dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.20">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal">
 
         <ImageButton
-            android:layout_width="128dp"
-            android:layout_height="127dp"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
             android:id="@+id/imageView"
-            android:layout_gravity="center"
-            android:src="@drawable/sa_senate"
+            android:layout_gravity="center_horizontal|top"
+            android:src="@drawable/sa_header"
             android:background="@android:color/transparent"
             android:scaleType="fitXY"/>
     </FrameLayout>
@@ -25,8 +24,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Medium Text"
-        android:id="@+id/textView"
+        android:text="Small Text"
+        android:id="@+id/textView1"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.20" />
 </LinearLayout>
