--- a/clubProject/app/src/main/res/values/strings_activity_login_screen.xml
+++ b/clubProject/app/src/main/res/values/strings_activity_login_screen.xml
@@ -7,7 +7,7 @@
     <string name="action_sign_in">Sign in or Register</string>
     <string name="action_sign_in_short">Sign in</string>
 
-    <!-- Test Forgot Password Page Link-->
+    <!-- Forgot Password Page Link-->
     <string name="ForgotPassText"><a href="http://www.google.com">Forgot Password?</a></string>
 
     <string name="error_invalid_email">This email address is invalid</string>
