--- a/clubProject/app/src/main/res/layout/activity_login_screen.xml
+++ b/clubProject/app/src/main/res/layout/activity_login_screen.xml
@@ -67,6 +67,13 @@
                     android:maxLines="1"
                     android:singleLine="true"/>
 
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Remember Me"
+                    android:id="@+id/remember"
+                    android:layout_gravity="right" />
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
