--- a/clubProject/app/src/main/res/layout/sa_layout_frag.xml
+++ b/clubProject/app/src/main/res/layout/sa_layout_frag.xml
@@ -1,31 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:weightSum="1">
+    tools:context=".sa_frag">
+
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sa_about_button"
+                android:id="@+id/sa_about_button" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sa_officers_button"
+                android:id="@+id/sa_officers_button"/>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sa_senate_button"
+                android:id="@+id/sa_senate_button"
+                android:layout_column="2" />
+
+            <ImageButton
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:text="@string/sa_phone_textView"
+                android:id="@+id/sa_phone_textView"
+                android:src="@drawable/dialer_icon"
+                android:layout_column="3"
+                android:background="@android:color/transparent"/>
+        </TableRow>
+    </TableLayout>
+
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:id="@+id/sa_banner_imageView"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/sa_header"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY" />
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:id="@+id/imageView"
-            android:layout_gravity="center_horizontal|top"
-            android:src="@drawable/sa_header"
-            android:background="@android:color/transparent"
-            android:scaleType="fitXY"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:id="@+id/textView1"
+            android:maxLines = "20"
+            android:scrollbars = "vertical"
+            />
     </FrameLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <TableLayout
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Small Text"
-        android:id="@+id/textView1"
-        android:layout_gravity="center_horizontal"
-        android:layout_weight="0.20" />
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sa_fb_button"
+                android:src="@drawable/facebook"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"/>
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sa_twitter_button"
+                android:src="@drawable/twitter"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sa_instagram_button"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                android:src="@drawable/instagram" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/sa_email_button"
+                android:background="@android:color/transparent"
+                android:scaleType="fitXY"
+                android:src="@drawable/email" />
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+        </TableRow>
+    </TableLayout>
 </LinearLayout>
