--- a/clubProject/app/src/main/res/layout/senate_frag.xml
+++ b/clubProject/app/src/main/res/layout/senate_frag.xml
@@ -5,6 +5,32 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <TableLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center">
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical"
+            android:layout_gravity="center_vertical">
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sn_minutes_button"
+                android:id="@+id/sn_minutes_button" />
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sn_senators_button"
+                android:id="@+id/sn_senators_button"/>
+        </TableRow>
+    </TableLayout>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="108dp"
@@ -14,7 +40,7 @@
         <ImageButton
             android:layout_width="128dp"
             android:layout_height="127dp"
-            android:id="@+id/imageView"
+            android:id="@+id/sn_banner_imageView"
             android:layout_gravity="center"
             android:src="@drawable/sa_senate"
             android:background="@android:color/transparent"
