demo example 4 now

--- a/clubProject/app/src/main/res/menu/club_manager_main.xml
+++ b/clubProject/app/src/main/res/menu/club_manager_main.xml
@@ -8,4 +8,8 @@
         android:title="@string/action_settings"
         android:orderInCategory="100"
         android:showAsAction="never" />
+    <item android:id="@+id/action_report"
+        android:title="@string/report_label"
+        android:orderInCategory="100"
+        android:showAsAction="never"/>
 </menu>
