--- a/clubProject/app/src/main/res/layout/activity_login_screen.xml
+++ b/clubProject/app/src/main/res/layout/activity_login_screen.xml
@@ -85,12 +85,22 @@
                     android:textColor="#0000FF"
                     android:layout_weight="1" />
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/action_reg"
+                    android:id="@+id/action_reg"
+                    android:layout_gravity="right"
+                    android:textStyle="italic"
+                    android:textColor="#0000FF"
+                    android:layout_weight="1"/>
+
                 <Button
                     android:id="@+id/email_sign_in_button"
                     style="?android:textAppearanceSmall"
+                    android:layout_marginTop="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:text="@string/action_sign_in"
                     android:textStyle="bold"/>
 
