--- a/clubProject/app/src/main/res/layout/report_frag.xml
+++ b/clubProject/app/src/main/res/layout/report_frag.xml
@@ -46,6 +46,7 @@
         android:layout_height="wrap_content"
         android:text="@string/button_report"
         android:id="@+id/button_report"
-        android:layout_gravity="center_horizontal" />
+        android:layout_gravity="center_horizontal"
+        android:onClick="reg_button"/>
 
 </LinearLayout>
