--- a/clubProject/app/src/main/res/layout/activity_login_screen.xml
+++ b/clubProject/app/src/main/res/layout/activity_login_screen.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.seniorproject.sauclubmanager.com.seniorproject.utilities.LoginScreen">
+    tools:context="com.seniorproject.sauclubmanager.LoginScreen">
 
     <!-- Login progress -->
     <ProgressBar
