--- a/clubProject/app/src/main/res/layout/myfeed.xml
+++ b/clubProject/app/src/main/res/layout/myfeed.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.seniorproject.sauclubmanager.myevents">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout style="@style/TitleBar">
         <ImageView style="@style/TitleBarLogo"
@@ -17,8 +14,9 @@
             android:src="@drawable/title_home_default"
             android:onClick="onClickHome" />
         <TextView style="@style/TitleBarText"
-            android:text="@string/title_feature3"
+            android:text="@string/title_feature2"
             android:id="@+id/user_pro_title"/>
+
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
