--- a/clubProject/app/src/main/res/values/dimens.xml
+++ b/clubProject/app/src/main/res/values/dimens.xml
@@ -19,4 +19,9 @@
     <dimen name="feed_item_status_pad_top">13dp</dimen>
     <dimen name="feed_item_corner_radius">3dp</dimen>
     <dimen name="feed_item_border_width">1dp</dimen>
+
+    <dimen name="title_height">45dip</dimen>
+    <dimen name="text_size_small">14sp</dimen>
+    <dimen name="text_size_medium">18sp</dimen>
+    <dimen name="text_size_large">22sp</dimen>
 </resources>
