sign out method implemented on everything except clubs page

--- a/clubProject/app/src/main/res/layout/calendar_activity.xml
+++ b/clubProject/app/src/main/res/layout/calendar_activity.xml
@@ -19,6 +19,11 @@
         <TextView style="@style/TitleBarText"
             android:text="@string/title_feature3"
             android:id="@+id/user_pro_title"/>
+        <ImageButton style="@style/TitleBarAction"
+            android:contentDescription="@string/description_home"
+            android:src="@drawable/logout"
+            android:onClick="Logout_button"
+            android:id="@+id/logout_button" />
     </LinearLayout>
 
 </RelativeLayout>
