--- a/clubProject/app/src/main/res/layout/user_profile.xml
+++ b/clubProject/app/src/main/res/layout/user_profile.xml
@@ -16,7 +16,11 @@
         <TextView style="@style/TitleBarText"
             android:text="@string/title_feature1"
             android:id="@+id/user_pro_title"/>
-
+        <ImageButton style="@style/TitleBarAction"
+            android:contentDescription="@string/description_home"
+            android:src="@drawable/logout"
+            android:onClick="Logout_button"
+            android:id="@+id/logout_button" />
     </LinearLayout>
 
     <LinearLayout
