clubs listview implemented and working

--- a/clubProject/app/src/main/res/layout/clubs.xml
+++ b/clubProject/app/src/main/res/layout/clubs.xml
@@ -25,7 +25,7 @@
     </LinearLayout>
 
     <ListView
-        android:id="@+id/list"
+        android:id="@+id/club_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         </ListView>
