--- a/clubProject/app/src/main/res/layout/picture_list.xml
+++ b/clubProject/app/src/main/res/layout/picture_list.xml
@@ -1,4 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="80dip" >
+
+    <ImageView
+        android:id="@+id/clubImage"
+        android:layout_width="90sp"
+        android:layout_height="90sp" />
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_toRightOf="@id/clubImage"
+        android:orientation="vertical"
+        android:paddingLeft="10sp"
+        tools:ignore="RtlSymmetry">
+
+        <TextView
+            android:id="@+id/clubName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp" />
+    </LinearLayout>
+
+</RelativeLayout>
+
+
+
+<!--
+<?xml version="1.0" encoding="utf-8"?>
 
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
@@ -13,4 +44,4 @@
             android:layout_height="50dp" />
     </TableRow>
 
-</TableLayout>
+</TableLayout>-->
