--- a/clubProject/app/src/main/res/layout/club_layout.xml
+++ b/clubProject/app/src/main/res/layout/club_layout.xml
@@ -19,11 +19,11 @@
             android:layout_gravity="center_horizontal" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:id="@+id/clubImageView"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/s_a_icon" />
+            />
     </LinearLayout>
 
     <LinearLayout
