--- a/clubProject/app/src/main/res/layout/user_profile.xml
+++ b/clubProject/app/src/main/res/layout/user_profile.xml
@@ -10,7 +10,6 @@
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,6 +32,11 @@
         <TextView style="@style/TitleBarText"
             android:text="@string/title_feature1"
             android:id="@+id/user_pro_title"/>
+        <ImageButton style="@style/TitleBarAction"
+            android:contentDescription="@string/description_home"
+            android:src="@drawable/settings"
+            android:onClick="onClickFeature"
+            android:id="@+id/settings_button" />
         <ImageButton style="@style/TitleBarAction"
             android:contentDescription="@string/description_home"
             android:src="@drawable/logout"
