--- a/clubProject/app/src/main/res/menu/club_manager_main.xml
+++ b/clubProject/app/src/main/res/menu/club_manager_main.xml
@@ -1,15 +1,17 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".HomeActivity" >
     <item android:id="@+id/action_example"
         android:title="@string/action_example"
-        android:showAsAction="withText|ifRoom" />
+        app:showAsAction="withText|ifRoom" />
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
-        android:showAsAction="never" />
+        app:showAsAction="never" />
     <item android:id="@+id/action_report"
         android:title="@string/report_label"
         android:orderInCategory="100"
-        android:showAsAction="never"/>
+        app:showAsAction="never"/>
 </menu>
