--- a/clubProject/app/src/main/res/layout/sa.xml
+++ b/clubProject/app/src/main/res/layout/sa.xml
@@ -43,9 +43,34 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent">
 
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1">
+
+            <Spinner
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/sa_spinner"
+                android:entries="@array/sa_info_array"
+                android:spinnerMode="dropdown"
+                android:layout_gravity="top" />
+
+            <Spinner
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/sa_social_spinner"
+                android:entries="@array/sa_social_array"
+                android:spinnerMode="dropdown"
+                android:layout_gravity="top" />
+        </LinearLayout>
+
         <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="top">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -53,7 +78,8 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/textView1"
                 android:maxLines = "30"
-                android:scrollbars = "vertical"/>
+                android:scrollbars = "vertical"
+                android:layout_gravity="top" />
         </FrameLayout>
 
         <!--<LinearLayout-->
@@ -100,30 +126,6 @@
                 <!--android:paddingRight="0dp" />-->
 
         <!--</LinearLayout>-->
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_weight="1">
-
-            <Spinner
-                android:layout_width="180dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/sa_spinner"
-                android:entries="@array/sa_info_array"
-                android:spinnerMode="dropdown"
-                android:layout_gravity="bottom" />
-
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/sa_social_spinner"
-                android:entries="@array/sa_social_array"
-                android:spinnerMode="dropdown"
-                android:layout_gravity="bottom" />
-        </LinearLayout>
 
     </LinearLayout>
 
